modules/vpc/publicsub.tf
# create public subnet az1
resource "aws_subnet" "public_subnet_az1" {
  vpc_id                  =  aws_vpc.vpc.id
  cidr_block              =  var.public_subnet_az1_cidr
  availability_zone       =  data.aws_availability_zones.available_zones.names[0]
  map_public_ip_on_launch =  true

  tags      = {
    Name    =  var.public_subnet_az1
  }
}

# create public subnet az2
resource "aws_subnet" "public_subnet_az2" {
  vpc_id                  =  aws_vpc.vpc.id
  cidr_block              =  var.public_subnet_az2_cidr
  availability_zone       =  data.aws_availability_zones.available_zones.names[1]
  map_public_ip_on_launch =  true

  tags      = {
    Name    = var.public_subnet_az2
  }
}
